<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>more_can</name>
  <version>0.0.0</version>
  <description>Package to publish CAN messages(test)</description>
  <maintainer email="m.vandervloet@student.han.nl">Mick van der Vloet</maintainer>
  <maintainer email="n.maslovs@student.han.nl">Nikolajs Maslovs</maintainer>
  <maintainer email="a.gkougkoulidis@student.han.nl">Antonis Gkougkoulidis</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>PCANBasic</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
